# RT-Action-NotifyGroup

./: Changes  MANIFEST  META.yml  Makefile.PL  README  Todo  configure  configure.ac
lib/RT/Action/: NotifyGroup.pm
sbin/: rt-notify-group-admin.in
